[package]
name = "prevmark"
version = "0.1.0"
edition = "2021"
resolver = "2"
build = "build.rs"
description = "A fast, native, cross-platform markdown previewer"
documentation = "https://docs.rs/prevmark"
repository = "https://github.com/jrmoulton/prevmark.git"
homepage = "https://github.com/jrmoulton/prevmark"
readme = "README.md"
license = "MIT"

[dependencies]
sixtyfps = "0.1.5"
pulldown-cmark = "0.8.0"
scraper = "0.12.0"
clap = "3.0.0-beta.5"

[build-dependencies]
sixtyfps-build = "0.1.5"
